# 3D-Computer-Graphics

./: .gitignore
projekt/GLCraft/: .gitignore  CMakeLists.txt  main.cpp
projekt/GLCraft/Application/: Application.cpp  Application.h  Context.h
projekt/GLCraft/Camera/: Camera.cpp  Camera.h  Movement.h
projekt/GLCraft/Model/: Block.cpp  Block.h
projekt/GLCraft/Renderer/: ChunkRenderer.h  CubeRenderer.cpp  CubeRenderer.h  Renderer.cpp  Renderer.h
projekt/GLCraft/Shader/: Shader.hpp
projekt/GLCraft/State/: StatePlaying.h
projekt/GLCraft/Texture/: BasicTexture.cpp  BasicTexture.h
projekt/GLCraft/shaders/: texturedVertexShader.vert
projekt/OpenGLTutorial/: CMakeLists.txt  main.cpp
projekt/OpenGLTutorial/Shader/: Shader.hpp
projekt/OpenGLTutorial/include/stb_image/: stb_image.h
zadaca1/zad1/: mathos.blend
zadaca1/zad2/: zad2.py
zadaca2/raytracer/: geometry.h  material.h  objects.h  ray.h  raytrace.cpp  raytracer  render.ppm  render_diffuse.ppm  render_phong.ppm  render_reflective.ppm  render_refractive.ppm  render_refractive2.ppm  temp.txt
zadaca3/: .gitignore  geometry.h  rasterizer  rasterizer.cpp  tgaOperator.hpp  zad1.tga  zad1_2.tga  zad2.tga  zad4_a.tga  zad4_b.tga
zadaca3/textures/: cro.tga
zadaca4/: .gitignore  CMakeLists.txt
zadaca4/Application/: Application.cpp  Context.cpp  Context.h
zadaca4/Camera/: Camera.h
zadaca4/Model/: Model.h
zadaca4/Renderer/: Renderer.cpp
zadaca4/Shader/: Shader.hpp
zadaca4/dz4/Camera/: Camera.cpp
zadaca4/dz4/Renderer/: Renderer.h
zadaca4/shaders/: normalFragmentShader.frag
(+7 files in other folders)
